@@ -1,5 +1,10 @@
 2007-05-30  Mukund Sivaraman  <muks@mukund.org>
 
+	* plug-ins/common/gtm.c: Use strncpy() instead of strcpy() to avoid
+	buffer overflows.
+
+2007-05-30  Mukund Sivaraman  <muks@mukund.org>
+
 	* plug-ins/jpeg/jpeg.c: Removed redundant image_ID declaration that
 	shadowed an outer variable needlessly (found using Splint).
 
